fix/feat: Rename site and fix sticky header overlap bug

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,7 +102,7 @@ ul {
     padding: 0 2rem;
 }
 
-header {
+.site-header {
     padding: 1.25rem 0;
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
